<resources>
    <string name="app_name">IBotProject</string>
    <string name="sample">IBotSDK Sample</string>
    <string name="bot_msg">Hello!! This is IBot</string>
    <string name="title_open">Choose how your chat window will open</string>
    <string name="title_orientation">Choose the orientation of the chat window</string>
    <string name="title_type">Choose the type of button</string>
    <string name="title_draggable">Choose draggable setting</string>
    <string name="button_base_color">Insert button base color</string>
    <string name="title_animate">Choose Button Animation</string>
    <string name="show_button"> Set and Show Button</string>
    <string name="set_button">IBot button setup is complete.</string>
</resources>
